fix: proportional gap

--- a/assets/design/components/splash-title.styl
+++ b/assets/design/components/splash-title.styl
@@ -34,7 +34,7 @@ $height = 3 * $line-height * $font-size
         animation hide $timing-splash
 
   > .words
-    padding-left $gap-normal
+    padding-left 0.15em
     transition transform $timing-splash
 
   /* stylelint-disable-next-line */
